--- a/symphony/assets/basic.css
+++ b/symphony/assets/basic.css
@@ -28,6 +28,7 @@ input, select, textarea, button {
 	margin: 0;
 	padding: 0;
 	font-size: 1em;
+	vertical-align: baseline;
 }
 ol, ul {
 	list-style: none;
@@ -43,6 +44,17 @@ table {
 
 body {
 	font: 68.75%/1.5 Lucida Grande, Tahoma, Verdana, sans-serif;
+}
+a {
+	color: #5072bf;
+	text-decoration: underline;
+	cursor: pointer;
+}
+a:hover {
+	color: #000;
+}
+a:active, a:focus {
+	color: #d42;
 }
 h1, h2 {
 	font: 127.28% Lucida Grande, Leelawadee, Tahoma, Verdana, sans-serif;
@@ -95,15 +107,16 @@ label input {
 	-ms-box-sizing: border-box;
 	-webkit-box-sizing: border-box;
 }
-label > input[type=checkbox] {
-	vertical-align: top;
-}
 input[size],
 input[type=radio],
 input[type=checkbox] {
 	display: inline;
 	margin: 0 0.25em 0 0;
 	width: auto;
+}
+label input[type=checkbox] {
+	position: relative;
+	top: 2px;
 }
 input[size],
 label + select {
