--- a/symphony/assets/error.css
+++ b/symphony/assets/error.css
@@ -9,7 +9,8 @@
 	margin: 0 auto;
 	border: 1px solid #eee;
 	background-color: #ccb;
-	max-width: 60em;
+	min-width: 45em;
+	max-width: 55%;
 }
 #description {
 	margin-top: 96px;
@@ -61,6 +62,7 @@
 	text-align: right;
 }
 #details dd {
+	overflow: auto;
 	margin-left: 6.3em;
 	border-left: 1px solid #ddc;
 	padding: 0.6em 1em;
