--- a/symphony/assets/symphony.duplicator.css
+++ b/symphony/assets/symphony.duplicator.css
@@ -5,11 +5,12 @@
 .duplicator {
 	background: #444433;
 	border: 1px solid #999988;
-	margin: 0;
 	list-style: none;
+	margin: 0;
+	overflow: hidden;
 }
 .duplicator i {
-	color: #887;
+	color: #888877;
 }
 .invalid .duplicator {
 	border-color: #aa2211;
@@ -40,7 +41,7 @@
 	right: 0;
 	text-decoration: none;
 	top: 0;
-	text-shadow: 1px 1px #DDDDCC;
+	text-shadow: 1px 1px #ddddcc;
 }
 .duplicator > .instance > .header .destructor:hover {
 	color: #555544;
@@ -114,6 +115,10 @@
 }
 .duplicator.ordering > .instance {
 	opacity: 0.8;
+	z-index: 1;
+}
+.duplicator.ordering > .controls {
+	border-bottom-color: #c5c5b5;
 }
 .duplicator > .instance.ordering {
 	border-top: 1px solid #eeeedd;
@@ -121,6 +126,7 @@
 	-webkit-box-shadow: 0 0 4px rgba(0, 0, 0, 0.5);
 	margin-top: -1px;
 	opacity: 1;
+	position: relative;
 	z-index: 2;
 }
 .duplicator > .instance.ordering,
