--- a/symphony/assets/admin.css
+++ b/symphony/assets/admin.css
@@ -745,6 +745,13 @@ ul.page a {
 .secondary .label {
 	margin-top: 1.5em;
 }
+.primary .group {
+	margin-top: -1.5em;
+	margin-bottom: -1.5em;
+}
+.primary .help {
+	margin-top: 1.5em;
+}
 .file input {
 	margin: -3px 0;
 	font: inherit;
