--- a/symphony/assets/basic.css
+++ b/symphony/assets/basic.css
@@ -159,6 +159,20 @@ button {
 	border: 1px solid #c31;
 	border-bottom-width: 0;
 }
+.invalid > .group > label {
+	margin: 0;
+	padding: 0.75em 1em 0.75em 0.75em;
+	background-color: #d42;
+	border: 1px solid #c31;
+	border-bottom-width: 0;
+	border-left-color: #d42;
+}
+.invalid > .group > label:first-child {
+	margin-left: -2.95em;
+	padding: 0.75em 0 0.75em 1em;
+	border-left-color: #c31;
+	border-right-width: 0;
+}
 .invalid > p {
 	margin: 0;
 	padding: 0 1em 0.75em;
