A few CSS changes for the Members extension

--- a/symphony/assets/basic.css
+++ b/symphony/assets/basic.css
@@ -159,13 +159,13 @@ button {
 	background-color: #d42;
 	border: 1px solid #c31;
 	border-bottom-width: 0;
-	border-left-color: #d42;
+	border-left-width: 0;
 }
 .invalid > .group > label:first-child {
 	margin-left: -2.95em;
 	padding: 0.75em 0 0.75em 1em;
 	border-left-color: #c31;
-	border-right-width: 0;
+	border-right-color: #d42;
 }
 .invalid > label {
 	margin-bottom: 0;
