--- a/symphony/assets/admin.css
+++ b/symphony/assets/admin.css
@@ -207,6 +207,9 @@ span.frame {
 	background-color: #f5f5f3;
 	text-align: center;
 }
+span.frame code {
+	color: #919183;
+}
 
 /*--- Tags/suggestion list ---*/
 
@@ -260,7 +263,8 @@ ul.tags .more:hover {
 .group > input[type=hidden]:first-child + * {
 	margin-left: -2.95em;
 }
-.group label > i {
+.group label > i,
+.secondary label > i {
 	max-width: 45%;
 	height: 16px;
 	white-space: nowrap;
@@ -269,7 +273,8 @@ ul.tags .more:hover {
 	cursor: help;
 	float: right;
 }
-.group label > i:hover {
+.group label > i:hover,
+.secondary label > i {
 	white-space:normal;
 	height:auto;
 	background: rgba(255, 255, 255, 0.8);
@@ -419,8 +424,7 @@ button.button {
 	color: #fff;
 	padding: .5em 1em;
 	margin: 0;
-	font-size: 10px;
-	line-height: 11px;
+	font: 10px/11px Lucida Grande, Leelawadee, Tahoma, Verdana, sans-serif;
 	text-decoration: none;
 	text-shadow: none;
 	cursor: pointer;
@@ -745,11 +749,23 @@ ul.page a {
 .secondary .label {
 	margin-top: 1.5em;
 }
-.primary .group label {
+.primary .group label,
+.secondary .group label {
 	margin-top: 0;
+	margin-bottom: 0;
 }
 .primary .help {
 	margin-top: 1.5em;
+}
+.primary label > * + span.frame,
+.secondary label > * + span.frame {
+	margin-top: 1.25em;
+}
+.primary label > i + span.frame,
+.secondary label > i + span.frame,
+.primary label > span.frame:first-child,
+.secondary label > span.frame:first-child {
+	margin-top: 0;
 }
 .file input {
 	margin: -3px 0;
