--- a/symphony/assets/basic.css
+++ b/symphony/assets/basic.css
@@ -152,27 +152,35 @@ button {
 	color: #fff;
 	margin-bottom: 1.5em;
 }
-.invalid > .group > label {
-	margin-left: 0;
+.invalid label {
 	margin-bottom: 0;
-	padding: 0.75em 1em 0.75em 0.75em;
 	background-color: #d42;
 	border: 1px solid #c31;
 	border-bottom-width: 0;
+}
+.invalid label > i {
+	top: 0.75em; right: 1em;
+	background-color: #d42;
+	color: #EAC9C2;
+}
+.invalid label > i:hover {
+	background-color: rgba(221, 68, 34, 0.8) !important;
+}
+.invalid > .group > label {
+	float: right;
+	margin-left: 0;
+	padding: 0.75em 1em 0.75em 0.75em;
 	border-left-width: 0;
 }
 .invalid > .group > label:first-child {
+	float: left;
 	margin-left: -2.95em;
-	padding: 0.75em 0 0.75em 1em;
+	padding: 0.75em 0 0.75em 1.1em;
 	border-left-color: #c31;
 	border-right-color: #d42;
 }
 .invalid > label {
-	margin-bottom: 0;
 	padding: 0.75em 1em 0.75em;
-	background-color: #d42;
-	border: 1px solid #c31;
-	border-bottom-width: 0;
 }
 .invalid > p {
 	clear: left;
