--- a/symphony/assets/basic.css
+++ b/symphony/assets/basic.css
@@ -47,10 +47,10 @@ table {
 -----------------------------------------------------------------------------*/
 
 body {
-	font: 68.75%/1.5 Lucida Grande, Tahoma, Verdana, sans-serif;
+	font: 68.75%/1.5 Lucida Grande, Leelawadee, Tahoma, Verdana, sans-serif;
 }
 a {
-	color: #5072bf;
+	color: #3f69a5;
 	text-decoration: underline;
 	cursor: pointer;
 }
@@ -143,6 +143,10 @@ select[multiple] {
 button {
 	padding: 3.5px 6px 4px;
 }
+button,
+input[type=submit] {
+	font-family: Lucida Grande, Leelawadee, Tahoma, Verdana, sans-serif;
+}
 
 /*-----------------------------------------------------------------------------
 	Globals - Errors
@@ -151,10 +155,12 @@ button {
 .invalid {
 	color: #fff;
 	margin-bottom: 1.5em;
+	text-shadow: 1px 1px rgba(0, 0, 0, 0.25);
 }
 .invalid label {
 	margin-bottom: 0;
-	background-color: #d42;
+	padding: 0.75em 1em 0.75em 0.75em;
+	background-color: #EB6347;
 	border: 1px solid #c31;
 	border-bottom-width: 0;
 }
@@ -183,12 +189,15 @@ body .invalid label > i {
 }
 .invalid > label {
 	padding: 0.75em 1em 0.75em;
+	background-color: #EB6347;
+	border: 1px solid #c31;
+	border-bottom-width: 0;
 }
 .invalid > p {
 	clear: left;
 	margin: 0;
 	padding: 0 1em 0.75em;
-	background-color: #d42;
+	background-color: #EB6347;
 	border: 1px solid #c31;
 	border-top-width: 0;
 	border-bottom-color: #b21;
